Polishing and refactoring